--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sqflite: ^2.0.0+4
+  path: ^1.8.3
   intl: ^0.20.1
   image_picker: ^0.8.7+4
 
